@@ -1,0 +1,54 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "SEVENTEEN\u5168\u65b0\u5c08\u8f2f\u524d\u594f\uff01\u300cSEVENTEEN Street\u300d\u6d3b\u52d5\u5373\u5c07\u767b\u5834\uff0c25\u842c\u7c89\u7d72\u9f4a\u805a\u9996\u723e\u9ad4\u9a57\u591a\u611f\u5b98\u76db\u5bb4", "description": "SEVENTEEN\u5168\u65b0\u5c08\u8f2f\u524d\u594f\uff01\u300cSEVENTEEN Street\u300d\u6d3b\u52d5\u5373\u5c07\u767b\u5834\uff0c25\u842c\u7c89\u7d72\u9f4a\u805a\u9996\u723e\u9ad4\u9a57\u591a\u611f\u5b98\u76db\u5bb4", "url": "https://www.famechos.me/news/SEVENTEEN\u5168\u65b0\u5c08\u8f2f\u524d\u594f\uff01\u300cSEVENTEEN Street\u300d\u6d3b\u52d5\u5373\u5c07\u767b\u5834\uff0c25\u842c\u7c89\u7d72\u9f4a\u805a\u9996\u723e\u9ad4\u9a57\u591a\u611f\u5b98\u76db\u5bb4/", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-05T21:56:00.816965+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴/"/>
+<meta name="description" content="SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴。一起揭開SEVENTEEN最新專輯的神秘面紗！" />
+<meta name="keywords" content="SEVENTEEN, SEVENTEEN Street, 首爾, 專輯, 粉絲, 多感官盛宴, K-POP" />
+
+        <meta property="og:url" content="https://www.famechos.me/news/SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴/" />
+        <meta property="og:title" content="SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴" />
+        <meta property="og:description" content="SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴" />
+        <meta property="twitter:description" content="SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+<h1>SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴</h1>
+</head>
+
+<body>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VJozzZI5RGk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>SEVENTEEN將於10月16日至25日在首爾南部的Apgujeong舉辦全新的「SEVENTEEN Street」活動。該活動的主題為「Feel」和「Fill」，與SEVENTEEN即將發行的專輯「Spill the Feels」相呼應。</p>
+<p>活動將分為四個不同的區域：</p>
+<p>* 感官區（Sensory Zone）：展示團體的多樣魅力</p>
+<p>* 多樣區（Diversity Zone）：粉絲可以通過顏色表達自己的情感</p>
+<p>* 聆聽區（Listening Zone）：播放成員的語音留言</p>
+<p>* 訊息牆（Message Wall）：粉絲可以寫信給SEVENTEEN</p>
+<p>當地餐廳、咖啡館、花店和香水工作坊也將參與活動，創造一個多感官的節日體驗。此外，與Airbnb的合作也將進一步提升活動的體驗。</p>
+<p>去年的SEVENTEEN Street活動吸引了約25萬名參觀者，今年的活動時間更長，預計將有更多粉絲參加。</p>
+<h2>全新專輯「Spill the Feels」即將隆重登場</h2>
+<p>SEVENTEEN的新專輯「Spill the Feels」將於10月14日發行。該專輯傳遞了一個共享情感和信任彼此來解決問題的訊息。專輯中最受期待的歌曲是「Love, Money, Fame (Feat. DJ哈立德)」。專輯還包括三首小分隊歌曲。</p>
+<p>與此同時，SEVENTEEN的世界巡演「Right Here」將於10月12日和13日在京畿道高陽體育園區（Goyang Sports Complex）拉開帷幕，隨後將在美國、日本和亞洲各大城市進行演出。</p>
+
+<p>資料來源： Korea Herald</p>
+</body>
+</html>
