@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 05 Oct 2024 21:55:01 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 05 Oct 2024 21:56:09 +0800</lastBuildDate>
 
   <item>
   <title>G-Dragon終於打破沉默！將在《劉QUIZ ON THE BLOCK》首次亮相，分享BIGBANG歲月、毒品風波和音樂復出計劃</title>
@@ -42,5 +42,10 @@
   <link>https://www.famechos.me/news/K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波/</link>
   <description>K-POP大爆炸！aespa、NCT、SF9成員接連發布新作品，河成雲捲入抄襲風波</description>
   <pubDate>Sat, 05 Oct 2024 21:55:01 +0800</pubDate>
+</item><item>
+  <title>SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴</title>
+  <link>https://www.famechos.me/news/SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴/</link>
+  <description>SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴</description>
+  <pubDate>Sat, 05 Oct 2024 21:56:09 +0800</pubDate>
 </item></channel>
 </rss>
