@@ -48,4 +48,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/SEVENTEEN全新專輯前奏！「SEVENTEEN Street」活動即將登場，25萬粉絲齊聚首爾體驗多感官盛宴/</ns0:loc>
+    <ns0:lastmod>2024-10-05T21:56:09+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
